--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -9,6 +9,7 @@ $icon-chevron-right: \f054;
 $icon-chevron-up: \f077;
 $icon-clone: \f24d;
 $icon-cogs: \f085;
+$icon-discord: \f392;
 $icon-envelope: \f0e0;
 $icon-exclamation: \f12a;
 $icon-exclamation-circle: \f06a;
