--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -551,7 +551,8 @@
 			&.phpbb_wlm-icon:before {
 				content: unicode($icon-windows);
 			}
-			&.jabber-icon, &.phpbb_aol-icon, &.phpbb_icq-icon {
+			&.jabber-icon, &.phpbb_aol-icon, &.phpbb_icq-icon,
+			&.contact_discord-icon {
 				&:before {
 					content: unicode($icon-heart);
 				}
