--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -31,6 +31,8 @@ $color-13: #aaaaaa; // gray
 $color-14: #f0a06a; // orange
 $color-15: #5e6c85; // blue gray
 $color-16: #591818; // red
+$color-17: #1c5b92; // blue
+$color-18: #921c1c; // red
 
 /* Fonts
 ========================================================================== */
