--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -146,6 +146,12 @@
 				color: $color-01;
 			}
 		}
+		.bbcode-center {
+			text-align: center;
+			img {
+				margin: 0 auto;
+			}
+		}
 	}
 }
 
