--- a/khyeras/styles/khyeras_v1/template/custom/stat_map.html
+++ b/khyeras/styles/khyeras_v1/template/custom/stat_map.html
@@ -85,13 +85,25 @@
 {# Get HP and MP Total #}
 
 	{% set hp_total = base_hp + race_hp_mod_avg + class_hp_mod_avg %}
+	{% set hp_current = hp_total - PROFILE_C_HP_VALUE %}
 	{% set mp_total = base_mp + race_mp_mod_avg + class_mp_mod_avg %}
+	{% set mp_current = mp_total - PROFILE_C_MP_VALUE %}
 
 {# Display and calculate stat bars #}
 
 	{% if S_PROFILE_C_HP %}
-		<div class="stat-bar hp-bar">{{ PROFILE_C_HP_NAME }} - {{ hp_total - PROFILE_C_HP_VALUE }} / {{ hp_total }}</div>
+		<div class="stat-bar hp-bar">
+			<div class="stat-bar-inner" style="width: {{ ((hp_current / hp_total) * 100) | number_format(2) }}%"></div>
+			<div class="stat-bar-label">
+				{{ hp_current }} / {{ hp_total }} {{ PROFILE_C_HP_NAME }}
+			</div>
+		</div>
 	{% endif %}
 	{% if S_PROFILE_C_MP %}
-		<div class="stat-bar mp-bar">{{ PROFILE_C_MP_NAME }} - {{ mp_total - PROFILE_C_MP_VALUE }} / {{ mp_total }}</div>
+		<div class="stat-bar mp-bar">
+			<div class="stat-bar-inner" style="width: {{ ((mp_current / mp_total) * 100) | number_format(2) }}%"></div>
+			<div class="stat-bar-label">
+				{{ mp_current }} / {{ mp_total }} {{ PROFILE_C_MP_NAME }}
+			</div>
+		</div>
 	{% endif %}
