--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -48,7 +48,7 @@
 
 <!-- IF S_USER_LOGGED_IN and not S_IS_BOT -->
 	<script>
-		var accType = '{KHY_ACCOUNT_TYPE}';
+		var accType = '{{ KHY_ACCOUNT_TYPE }}';
 		var groupName = '{{ KHY_GROUP_NAME | title }}';
 	</script>
 <!-- ENDIF -->
