--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_welcome.html
@@ -7,13 +7,15 @@
 						{$DISPLAY_AVATAR}
 						{$DISPLAY_USERNAME}
 						<!-- IF KHY_GROUP_NAME == 'Characters' -->
-							<p class="character-level">
+							<p class="level">
 								Level 01
 							</p>
-							<p class="character-stats">
+							<p class="race-and-class">
 								{{ KHY_RACE | replace({',': ' and'}) }}
-								<span class="separator">/</span>
-								{{ KHY_CLASS | replace({',': ' and'}) }}
+								<!-- IF KHY_CLASS -->
+									<span class="separator">/</span>
+									{{ KHY_CLASS | replace({',': ' and'}) }}
+								<!-- ENDIF -->
 							</p>
 						<!-- ELSEIF S_REGISTERED_USER -->
 							<p>
