--- a/khyeras/_dev/styles/khyeras_v1/template/custom/stat_map.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/stat_map.html
@@ -1,3 +1,20 @@
+{# Set variables depending on what page we're on #}
+	{% if SCRIPT_NAME == 'viewtopic' %}
+		{% set race_opts = postrow.PROFILE_C_RACE_OPTS_VALUE %}
+		{% set class_opts = postrow.PROFILE_C_CLASS_OPTS_VALUE %}
+		{% set hp_name = postrow.PROFILE_C_HP_NAME %}
+		{% set hp_value = postrow.PROFILE_C_HP_VALUE %}
+		{% set mp_name = postrow.PROFILE_C_MP_NAME %}
+		{% set mp_value = postrow.PROFILE_C_MP_VALUE %}
+	{% else %}
+		{% set race_opts = PROFILE_C_RACE_OPTS_VALUE %}
+		{% set class_opts = PROFILE_C_CLASS_OPTS_VALUE %}
+		{% set hp_name = PROFILE_C_HP_NAME %}
+		{% set hp_value = PROFILE_C_HP_VALUE %}
+		{% set mp_name = PROFILE_C_MP_NAME %}
+		{% set mp_value = PROFILE_C_MP_VALUE %}
+	{% endif %}
+
 {# Base HP and MP value that everyone starts with #}
 
 	{% set base_hp = 20 %}
@@ -5,8 +22,8 @@
 
 {# Set race array #}
 
-	{% if PROFILE_C_RACE_OPTS_VALUE %}
-		{% set race_array = PROFILE_C_RACE_OPTS_VALUE | split(', ') %}
+	{% if race_opts %}
+		{% set race_array = race_opts | split(', ') %}
 	{% else %}
 		{% set race_array = ['Empty'] %}
 	{% endif %}
@@ -42,8 +59,8 @@
 
 {# Set class array #}
 
-	{% if PROFILE_C_CLASS_OPTS_VALUE %}
-		{% set class_array = PROFILE_C_CLASS_OPTS_VALUE | split(', ') %}
+	{% if class_opts %}
+		{% set class_array = class_opts | split(', ') %}
 	{% else %}
 		{% set class_array = ['Empty'] %}
 	{% endif %}
@@ -85,25 +102,24 @@
 {# Get HP and MP Total #}
 
 	{% set hp_total = base_hp + race_hp_mod_avg + class_hp_mod_avg %}
-	{% set hp_current = hp_total - PROFILE_C_HP_VALUE %}
+	{% set hp_current = hp_total - hp_value %}
 	{% set mp_total = base_mp + race_mp_mod_avg + class_mp_mod_avg %}
-	{% set mp_current = mp_total - PROFILE_C_MP_VALUE %}
+	{% set mp_current = mp_total - mp_value %}
 
 {# Display and calculate stat bars #}
-
-	{% if S_PROFILE_C_HP %}
-		<div class="stat-bar hp-bar">
+	{% if postrow.S_PROFILE_C_HP or S_PROFILE_C_HP %}
+		<div class="stat-bar{% if SCRIPT_NAME == 'viewtopic' %} stat-bar-small{% endif %} hp-bar">
 			<div class="stat-bar-inner" style="width: {{ ((hp_current / hp_total) * 100) | number_format(2) }}%"></div>
 			<div class="stat-bar-label">
-				{{ hp_current }} / {{ hp_total }} {{ PROFILE_C_HP_NAME }}
+				{{ hp_current }} / {{ hp_total }} {{ hp_name }}
 			</div>
 		</div>
 	{% endif %}
-	{% if S_PROFILE_C_MP %}
-		<div class="stat-bar mp-bar">
+	{% if postrow.S_PROFILE_C_MP or S_PROFILE_C_MP %}
+		<div class="stat-bar{% if SCRIPT_NAME == 'viewtopic' %} stat-bar-small{% endif %} mp-bar">
 			<div class="stat-bar-inner" style="width: {{ ((mp_current / mp_total) * 100) | number_format(2) }}%"></div>
 			<div class="stat-bar-label">
-				{{ mp_current }} / {{ mp_total }} {{ PROFILE_C_MP_NAME }}
+				{{ mp_current }} / {{ mp_total }} {{ mp_name }}
 			</div>
 		</div>
 	{% endif %}
