--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -335,6 +335,44 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 	}
 }
 
+/* View Topic - Profile
+========================================================================== */
+
+.postprofile {
+	dd {
+		&.profile-contact {
+			position: relative;
+			.dropdown-container {
+				display: inline-block;
+				position: static;
+				.dropdown .dropdown-contents > div {
+					display: inline;
+				}
+				&.dropdown-visible .dropdown {
+					left: 0;
+				}
+			}
+		}
+		&.level, &.race-and-class {
+			text-align: center;
+			margin: 0;
+		}
+		&.stats {
+			margin: 10px 0 15px 0;
+		}
+		&.character-separator {
+			//margin: 20px 0;
+			&:before {
+				content: '';
+				display: block;
+				max-width: 33.33%;
+				margin: auto;
+				border-bottom: 1px dashed $color-04;
+			}
+		}
+	}
+}
+
 /* View Topic - Topic & PM Layout (not preview or review)
 ========================================================================== */
 
